<resources>
    <string name="accept_button">Akzeptieren</string>
    <string name="close_button">Schließen</string>
    <string name="cancel_button">Abbrechen</string>
    <string name="back_button">Zurück</string>
    <string name="close_okay">Alles klar</string>
    <string name="roger_that">Verstanden</string>
    <string name="toast_no_internet">Keine Internetverbindung.</string>
    <string name="toast_no_connection_to_server">Es konnte keine Verbindung zum Server hergestellt werden.</string>
    <string name="toast_no_email_client">Kein konfiguriertes E-Mail-Programm gefunden.</string>
    <string name="toast_problem_showing_pdf">Es gab ein Problem beim Anzeigen der PDF.</string>
    <string name="toast_problem_bookmarking_article">Der Artikel konnte nicht zu den Lesezeichen hinzugefügt werden. Bitte versuchen Sie es erneut.</string>
    <string name="toast_click_again_to_exit">Nochmal drücken um App zu schließen</string>
    <string name="toast_imprint_not_possible_to_bookmark">Das Impressum kann nicht zur Leseliste hinzugefügt werden</string>
    <string name="toast_tom_not_possible_to_bookmark">Der Tom am Ende kann nicht zur Leseliste hinzugefügt werden</string>
    <string name="toast_podcast_not_possible_to_bookmark">Podcasts können nicht zur Leseliste hinzugefügt werden</string>
    <string name="toast_tom_not_possible_to_share">Der Tom am Ende kann nicht geteilt werden</string>
    <string name="toast_podcast_not_possible_to_share">Der Podcast kann nicht geteilt werden</string>
    <string name="toast_loading_new_issue_from_server">Eine aktualisierte Ausgabe wird geladen</string>
    <string name="snack_article_bookmarked">Der Artikel wurde zur Leseliste hinzugefügt.</string>
    <string name="snack_article_debookmarked">Der Artikel wurde aus Ihrer Leseliste entfernt.</string>
    <string name="snack_article_bookmark_action">Leseliste ansehen</string>
    <string name="popup_login_elapsed_header">Ihr %s ist am %s abgelaufen.</string>
    <string name="popup_login_elapsed_header_no_date">Ihr %s ist abgelaufen.</string>
    <string name="popup_login_elapsed_text">Wir haben Ihnen zum Ablauf Ihres %s Informationen zu unseren Abonnements an Ihre E-Mail-Adresse zugesandt.\n\nFalls Sie diese E-Mail nicht finden können, oder weitere Fragen haben, können Sie jetzt einfach unserem Service-Team eine Nachricht zusenden.\n\nFür weitere Fragen wenden Sie sich bitte an unseren Service unter: <a href="mailto:fragen@taz.de">fragen@taz.de</a></string>
    <string name="popup_login_elapsed_message_to_abo">Ihre Nachricht</string>
    <string name="popup_login_elapsed_checkbox_message">Bitte informieren Sie mich zu aktuellen Abo-Möglichkeiten</string>
    <string name="popup_login_elapsed_positive_button">Absenden</string>
    <string name="popup_login_elapsed_message_to_short">Ihre Nachricht ist zu kurz!</string>
    <string name="toast_login_failed_retry">Login fehlgeschlagen</string>
    <string name="toast_login_successful">Erfolgreich angemeldet.</string>
    <string name="toast_login_with_email">Bitte loggen Sie sich mit Ihrer E-Mail-Adresse ein.</string>
    <string name="toast_error_report_sent">Fehlerbericht gesendet.</string>
    <string name="toast_error_report_upload_file_too_big">Die angefügte Datei ist leider zu groß.</string>
    <string name="toast_error_report_upload_file_not_found">Die Datei konnte leider nicht gefunden werden.</string>
    <string name="toast_switch_to_pdf"><b>Zeitungsansicht</b>\nSie können jetzt die taz im Layout der Zeitungsansicht lesen.</string>
    <string name="toast_switch_to_mobile"><b>App-Ansicht</b>\nSie können jetzt die taz in der für mobile Geräte optimierten Ansicht lesen.</string>
    <string name="toast_unknown_error">Ein unbekannter Fehler ist aufgetreten.</string>
    <string name="toast_logout_invalid">Sie sind abgemeldet.</string>
    <string name="toast_error_mapping_update">Die Server Antwort konnte nicht verarbeitet werden.\nBitte stellen Sie sicher, dass die App auf dem neuesten Stand ist.</string>
    <string name="toast_login_week">Du hast dich mit einem wochentaz-Abo angemeldet. Werktägliche taz-Ausgaben werden mit diesem Abo nicht in der App angezeigt.</string>
    <string name="toast_section_drawer_error">Ein unbekannter Fehler ist aufgetreten.\nÖffnen Sie die Ausgabe erneut.</string>
    <string name="navigation_drawer_open">Seitenflügel öffnen</string>
    <string name="navigation_drawer_close">Seitenflügel schließen</string>
    <string name="something_went_wrong_try_later">Etwas unerwartetes ist passiert. Bitte versuchen Sie es später erneut.</string>
    <string name="help">Hilfe</string>
    <string name="tab_bar_home">Home</string>
    <string name="tab_bar_bookmarks">Leseliste</string>
    <string name="tab_bar_listen">Hören</string>
    <string name="tab_bar_listen_podcasts">podcasts</string>
    <string name="tab_bar_listen_playlist">audioliste</string>
    <string name="tab_bar_search">Suche</string>
    <string name="tab_bar_new_badge">NEU</string>
    <string name="bottom_navigation_action_bookmark">Zu den Lesezeichen hinzufügen</string>
    <string name="bottom_navigation_action_home">Zum Home-Bildschirm</string>
    <string name="bottom_navigation_action_audio">Audio abspielen</string>
    <string name="bottom_navigation_action_share">Teilen</string>
    <string name="bottom_navigation_action_size">Schriftgröße ändern</string>
    <string name="bottom_navigation_action_pdf">Umschalten in die Zeitungsansicht</string>
    <string name="bottom_navigation_action_app_view">Umschalten in die mobile Ansicht</string>
    <string name="fragment_home_login">Anmelden</string>
    <string name="fragment_default_header_title">die tageszeitung</string>
    <string name="fragment_default_week_header_title">wochentaz</string>
    <string name="fragment_header_article_index_section_count">%1$d/%2$d</string>
    <string name="fragment_header_article_pagina">Seite %s</string>
    <string name="fragment_header_article_pagina_short">S. %s</string>
    <string name="fragment_header_custom_index_indicator">%1$d von %2$d</string>
    <string name="fragment_header_custom_published_date">Ausgabe %s</string>
    <string name="order_button">Bestellen</string>
    <string name="order_note_text"><u>Hinweise zum taz Probeabo</u></string>
    <string name="order_note_text_detail">Nach einer Bestellung erfolgt eine Bestätigung auf Ihrem Bildschirm. Sie werden sofort nach Eingang Ihrer Bestellung per E-Mail um Bestätigung gebeten. Sollten Sie diese E-Mail nicht erhalten, dann schauen Sie (vor allem, falls Sie AOL-Nutzer:in sind) auch mal in Ihren Spam-Ordner, vielleicht finden Sie sie dort. Die App-Ausgabe der taz steht Ihnen bereits am Vorabend des Erscheinungstages in der Ansicht und zur Verfügung. Das Probeabo endet automatisch.</string>
    <string name="imprint">Impressum</string>
    <string name="settings">Einstellungen</string>
    <string name="fragment_bottom_sheet_text_size_description">Textgröße</string>
    <string name="fragment_bottom_sheet_text_size_decrease">kleinere Schrift</string>
    <string name="fragment_bottom_sheet_text_size_increase">größere Schrift</string>
    <string name="fragment_bottom_sheet_text_size_night_mode_description">Tag- und Nachtmodus</string>
    <string name="fragment_bottom_sheet_text_day_mode">Heller Hintergrund</string>
    <string name="fragment_bottom_sheet_text_night_mode">Dunkler Hintergrund</string>
    <string name="fragment_bottom_sheet_column_description">Artikeldarstellung</string>
    <string name="fragment_bottom_sheet_single_column_mode">Einspaltigkeit</string>
    <string name="fragment_bottom_sheet_multi_column_mode">Mehrspaltigkeit</string>
    <string name="fragment_bottom_sheet_text_size_settings_description">Weitere Einstellungen</string>
    <string name="fragment_bottom_sheet_text_size_settings">Einstellungen</string>
    <string name="fragment_bottom_sheet_issue_read">Ausgabe lesen</string>
    <string name="fragment_bottom_sheet_issue_share">Titelbild teilen</string>
    <string name="fragment_bottom_sheet_issue_delete">Ausgabe löschen</string>
    <string name="fragment_bottom_sheet_issue_download">Ausgabe herunterladen</string>
    <string name="fragment_bottom_sheet_issue_download_with_audios">Ausgabe mit Audio herunterladen</string>
    <string name="fragment_bottom_sheet_issue_download_additionally_audios">Audioinhalte herunterladen</string>
    <string name="fragment_bottom_sheet_delete_last_displayable">Lesestatus zurücksetzen</string>
    <string name="fragment_bottom_sheet_notifications_title_01">Nichts verpassen …</string>
    <string name="fragment_bottom_sheet_notifications_description_01">… im wahren Leben nicht immer leicht, doch in der taz App kein Problem: mit unseren praktischen Mitteilungen.\nAuf Wunsch benachrichtigen wir Sie stets per Push-Nachricht, sobald die neue Ausgabe da ist – so wissen Sie bereits am Vorabend, was morgen in der Zeitung steht.</string>
    <string name="fragment_bottom_sheet_notifications_title_02">Sie wollen Bescheid wissen?</string>
    <string name="fragment_bottom_sheet_notifications_description_02">Auf Wunsch benachrichtigen wir Sie stets per Push-Nachricht, sobald die neue Ausgabe da ist – so wissen Sie bereits am Vorabend, was morgen in der Zeitung steht.</string>
    <string name="settings_category_issue_management">ausgabenverwaltung</string>
    <string name="settings_category_text">darstellung</string>
    <string name="settings_category_account">konto</string>
    <string name="settings_category_support">hilfe</string>
    <string name="settings_category_legal">rechtliches</string>
    <string name="settings_text_justified">Blocksatz</string>
    <string name="settings_text_night_mode">Nachtmodus</string>
    <string name="settings_text_tap_to_scroll">Tippen am Rand</string>
    <string name="settings_account_manage_account">Anmelden</string>
    <string name="settings_account_logout">Abmelden (%s)</string>
    <string name="settings_account_delete">Konto löschen</string>
    <string name="settings_account_elapsed">abgelaufen</string>
    <string name="settings_general_keep_number_issues">Maximale Anzahl der zu speichernden Ausgaben</string>
    <string name="settings_faq">FAQ</string>
    <string name="settings_delete_all_issues">Alle Ausgaben löschen</string>
    <string name="settings_reset_app">App in Auslieferungszustand zurücksetzen</string>
    <string name="settings_welcome_slides">Erste Schritte</string>
    <string name="settings_terms">Allgemeine Geschäftsbedingungen (AGB)</string>
    <string name="settings_data_policy">Datenschutzerklärung</string>
    <string name="settings_revocation">Widerruf</string>
    <string name="settings_support_report_bug">Fehler melden</string>
    <string name="settings_auto_downloads_switch">Neue Ausgaben automatisch laden</string>
    <string name="settings_auto_pdf_downloads_switch">Zeitungsansicht immer mitladen</string>
    <string name="settings_notifications">mitteilungen erlauben</string>
    <string name="settings_auto_downloads_wifi_switch">Nur im W-Lan herunterladen</string>
    <string name="button_close_text">Schließen</string>
    <string name="search_advanced_radio_timeslot_any">beliebiger Zeitraum</string>
    <string name="search_advanced_radio_timeslot_last_day">letzter Tag</string>
    <string name="search_advanced_radio_timeslot_last_week">letzte 7 Tage</string>
    <string name="search_advanced_radio_timeslot_last_month">letzte 31 Tage</string>
    <string name="search_advanced_radio_timeslot_last_year">letzte 365 Tage</string>
    <string name="search_advanced_radio_timeslot_custom">Zeitraum festlegen…</string>
    <string name="search_advanced_radio_published_in_any">überall</string>
    <string name="search_advanced_radio_published_in_taz">taz</string>
    <string name="search_advanced_radio_published_in_lmd">Le monde Diplomatique</string>
    <string name="search_advanced_radio_published_in_kontext">Kontext</string>
</resources>