<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_navigation_action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/tab_bar_home" />
    <item
        android:id="@+id/bottom_navigation_action_bookmark"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/tab_bar_bookmarks" />
    <item
        android:id="@+id/bottom_navigation_action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/tab_bar_search" />
    <item
        android:id="@+id/bottom_navigation_action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_activity" />
    <item
        android:id="@+id/bottom_navigation_action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>