<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    app:statusBarBackground="@android:color/transparent"
    tools:context="de.taz.app.android.ui.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:scrimAnimationDuration="0">

            <include
                android:id="@+id/settings_header"
                layout="@layout/fragment_header_default" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/web_view_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/nav_bottom_height"
            android:paddingStart="@dimen/fragment_settings_padding_horizontal"
            android:paddingEnd="@dimen/fragment_settings_padding_horizontal">

            <TextView
                android:id="@+id/fragment_settings_category_account"
                style="@style/TextAppearance.Settings.Category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_category_account"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_settings_account_manage_account"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_account_manage_account"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_category_account" />

            <TextView
                android:id="@+id/fragment_settings_account_email"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_account_manage_account" />

            <TextView
                android:id="@+id/fragment_settings_account_elapsed"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:text="@string/settings_account_elapsed"
                android:textAlignment="textEnd"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_account_manage_account"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/fragment_settings_account_logout"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_account_logout"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_account_email" />

            <TextView
                android:id="@+id/fragment_settings_account_delete"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_account_delete"
                android:textColor="@color/deleteRed"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_account_logout" />

            <TextView
                android:id="@+id/fragment_settings_category_issue_management"
                style="@style/TextAppearance.Settings.Category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_category_issue_management"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_account_delete" />

            <TextView
                android:id="@+id/fragment_settings_general_keep_issues"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_general_keep_number_issues"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_category_issue_management" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/fragment_settings_auto_download_wifi_switch"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_auto_downloads_wifi_switch"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_general_keep_issues" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/fragment_settings_auto_download_switch"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_auto_downloads_switch"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_auto_download_wifi_switch" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/fragment_settings_auto_pdf_download_switch"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_auto_pdf_downloads_switch"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_auto_download_switch" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/fragment_settings_notifications_switch"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_notifications"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_auto_pdf_download_switch" />

            <include
                android:id="@+id/fragment_settings_storage_location"
                layout="@layout/storage_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_notifications_switch" />

            <TextView
                android:id="@+id/fragment_settings_delete_all_issues"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_delete_all_issues"
                android:textColor="@color/deleteRed"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_storage_location" />

            <TextView
                android:id="@+id/fragment_settings_category_text"
                style="@style/TextAppearance.Settings.Category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_category_text"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_delete_all_issues" />

            <include
                android:id="@+id/fragment_settings_text_size"
                style="@style/TextAppearance.Settings.Category"
                layout="@layout/settings_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_category_text" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/fragment_settings_text_justified"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_text_justified"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_text_size" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/fragment_settings_night_mode"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_text_night_mode"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_text_justified" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/fragment_settings_tap_to_scroll"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_text_tap_to_scroll"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_night_mode" />

            <TextView
                android:id="@+id/fragment_settings_category_support"
                style="@style/TextAppearance.Settings.Category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_category_support"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_tap_to_scroll" />

            <TextView
                android:id="@+id/fragment_settings_welcome_slides"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_welcome_slides"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_category_support" />

            <TextView
                android:id="@+id/fragment_settings_faq"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_faq"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_welcome_slides" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_settings_support_report_bug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/settings_support_report_bug"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_faq" />


            <TextView
                android:id="@+id/fragment_settings_reset_app"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_reset_app"
                android:textColor="@color/deleteRed"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_support_report_bug" />

            <TextView
                android:id="@+id/fragment_settings_category_legal"
                style="@style/TextAppearance.Settings.Category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_category_legal"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_reset_app" />

            <TextView
                android:id="@+id/fragment_settings_terms"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_terms"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_category_legal" />

            <TextView
                android:id="@+id/fragment_settings_data_policy"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_data_policy"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_terms" />

            <TextView
                android:id="@+id/fragment_settings_revocation"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:text="@string/settings_revocation"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_data_policy" />

            <TextView
                android:id="@+id/fragment_settings_version_number"
                style="@style/TextAppearance.Settings.Entry"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/fragment_settings_version_margin"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_revocation" />

            <FrameLayout
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_version_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/experimental_container"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>